--- a/style-dictionary/tokens/components/button/buttonIcon.json5
+++ b/style-dictionary/tokens/components/button/buttonIcon.json5
@@ -1,3 +1,4 @@
+
 {
     "buttonIcon": {
         "primary": {
@@ -398,7 +399,7 @@
                             "value": "{color.text.link.active.value}"
                         },
                         "disable": {
-                            "value": "{color.text.accent.disable.value}"
+                            "value": "{color.text.primary.disable.value}"
                         }
                     }
                 },
@@ -439,10 +440,10 @@
                             "value": "{color.bg.transparent.default.value}"
                         },
                         "hover": {
-                            "value": "{color.bg.primary.hover.value}"
+                            "value": "{color.bg.statusInfo.hover.value}"
                         },
                         "active": {
-                            "value": "{color.bg.primary.active.value}"
+                            "value": "{color.bg.statusInfo.active.value}"
                         },
                         "disable": {
                             "value": "{color.bg.transparent.default.value}"
@@ -450,16 +451,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.accent.default.value}"
+                            "value": "{color.text.link.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.accent.hover.value}"
+                            "value": "{color.text.link.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.accent.active.value}"
+                            "value": "{color.text.link.active.value}"
                         },
                         "disable": {
-                            "value": "{color.text.accent.disable.value}"
+                            "value": "{color.text.primary.disable.value}"
                         }
                     }
                 },
@@ -500,10 +501,10 @@
                             "value": "{color.bg.transparent.default.value}"
                         },
                         "hover": {
-                            "value": "{color.bg.primary.hover.value}"
+                            "value": "{color.bg.statusInfo.hover.value}"
                         },
                         "active": {
-                            "value": "{color.bg.primary.active.value}"
+                            "value": "{color.bg.statusInfo.active.value}"
                         },
                         "disable": {
                             "value": "{color.bg.transparent.default.value}"
@@ -511,16 +512,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.accent.default.value}"
+                            "value": "{color.text.link.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.accent.hover.value}"
+                            "value": "{color.text.link.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.accent.active.value}"
+                            "value": "{color.text.link.active.value}"
                         },
                         "disable": {
-                            "value": "{color.text.accent.disable.value}"
+                            "value": "{color.text.primary.disable.value}"
                         }
                     }
                 },
@@ -1005,13 +1006,13 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.accent.default.value}"
+                            "value": "{color.text.link.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.accent.hover.value}"
+                            "value": "{color.text.link.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.accent.active.value}"
+                            "value": "{color.text.link.active.value}"
                         },
                         "disable": {
                             "value": "{color.text.primary.disable.value}"
@@ -1066,13 +1067,13 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.accent.default.value}"
+                            "value": "{color.text.link.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.accent.hover.value}"
+                            "value": "{color.text.link.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.accent.active.value}"
+                            "value": "{color.text.link.active.value}"
                         },
                         "disable": {
                             "value": "{color.text.primary.disable.value}"
