add new token of font demibold

--- a/style-dictionary/tokens/base/font.json5
+++ b/style-dictionary/tokens/base/font.json5
@@ -13,7 +13,7 @@
             },
             "bold": {
                 "default": {
-                    "value": "SuisseIntl-SemiBold"
+                    "value": "Kupibilet_DemiBold"
                 }
             }
         }
